force-app/main/default/objects/Compliance_Scrub_Log__c/Compliance_Scrub_Log__c.object-meta.xml
<CustomObject>
    <label>Compliance Scrub Log</label>
    <pluralLabel>Compliance Scrub Logs</pluralLabel>
    <nameField>
        <displayFormat>SCRUB-{00000000}</displayFormat>
        <label>Scrub Log #</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
    <description>Audit trail — one row per phone scrubbed against TCPA Litigator List.</description>
</CustomObject>