force-app/main/default/objects/Compliance_Scrub_Log__c/fields/Clean__c.field-meta.xml
<CustomField>
    <fullName>Clean__c</fullName>
    <label>Clean</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>