force-app/main/default/objects/Compliance_Scrub_Log__c/fields/Is_Bad_Number__c.field-meta.xml
<CustomField>
    <fullName>Is_Bad_Number__c</fullName>
    <label>Is Bad Number</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>