force-app/main/default/objects/Compliance_Scrub_Log__c/fields/Job_Key__c.field-meta.xml
<CustomField>
    <fullName>Job_Key__c</fullName>
    <label>Job Key</label>
    <length>40</length>
    <type>Text</type>
    <inlineHelpText>Batch/Apex job id for this scrub run.</inlineHelpText>
</CustomField>