force-app/main/default/objects/Compliance_Scrub_Log__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <label>Lead</label>
    <type>Lookup</type>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Compliance Scrub Logs</relationshipLabel>
    <relationshipName>Compliance_Scrub_Logs</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>