force-app/main/default/objects/Compliance_Scrub_Log__c/fields/Matched_Lists__c.field-meta.xml
<CustomField>
    <fullName>Matched_Lists__c</fullName>
    <label>Matched Lists</label>
    <length>255</length>
    <type>Text</type>
    <inlineHelpText>Vendor "status" string, e.g. "TCPA | Federal DNC".</inlineHelpText>
</CustomField>