force-app/main/default/objects/Compliance_Scrub_Log__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <label>Result</label>
    <length>20</length>
    <type>Text</type>
    <inlineHelpText>Clear / Do Not Contact / Error</inlineHelpText>
</CustomField>