force-app/main/default/objects/Compliance_Scrub_Log__c/fields/Scrubbed_At__c.field-meta.xml
<CustomField>
    <fullName>Scrubbed_At__c</fullName>
    <label>Scrubbed At</label>
    <type>DateTime</type>
</CustomField>