force-app/main/default/objects/Compliance_Scrub_Log__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <label>Vendor</label>
    <length>100</length>
    <type>Text</type>
    <defaultValue>"TCPA Litigator List"</defaultValue>
</CustomField>